[package]
name = "emery"
version = "0.1.0"
edition = "2018"
description = "Test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[build-dependencies]
bindgen = "0.53.1"

[lib]
name = "emery"

[[example]]
name = "fast_blank"
crate-type = ["cdylib"]
path = "examples/fast_blank.rs"
